# stork

./: .gitignore
spin-app/: Cargo.toml  build.sh  spin.toml
spin-app/src/: lib.rs
spin-app/wit/: world.wit
spin-test/: Cargo.toml
spin-test/src/: lib.rs
stork/: Cargo.toml
stork/src/: lib.rs  request.rs  s3.rs
stork/wit/: world.wit
