[package]
name = "stork"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow = "1"
wit-bindgen-rt = { version = "0.24.0", features = ["bitflags"] }
wasi = "0.13.0"
futures = "0.3"
url = "2.5"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "seungjin:stork"

[package.metadata.component.dependencies]

[package.metadata.componenet.target.dependencies]
"wasi:http" = { path = "wit/deps/http" }
